@@ -1,3 +1,8 @@
+ags (3.3.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV because port-value-length mismatch of ags-fx-analyse
+
 ags (3.3.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
